--- a/i3/config
+++ b/i3/config
@@ -6,15 +6,18 @@ set $left h
 set $down j
 set $up k
 set $right l
-
 gaps inner 5
 gaps outer 0
-
 workspace_layout default
 floating_modifier $mod
 # }}}
 # startup {{{
 exec --no-startup-id volumeicon
+exec --no-startup-id ssh-agent -a "${SSH_AUTH_SOCK}" &
+exec --no-startup-id xset r rate 300 50 # Speed xrate up
+exec --no-startup-id setxkbmap -option ctrl:nocaps # CapsLock behaves like Ctrl
+exec --no-startup-id xcape -e 'Control_L=Escape' # short-pressed Ctrl behaves like Escape
+exec --no-startup-id setbg &
 # }}}
 # keybindings {{{
 bindsym $mod+Return exec i3-sensible-terminal -e fish
