--- a/i3/config
+++ b/i3/config
@@ -18,6 +18,7 @@ exec --no-startup-id xset r rate 300 50 # Speed xrate up
 exec --no-startup-id setxkbmap -option ctrl:nocaps # CapsLock behaves like Ctrl
 exec --no-startup-id xcape -e 'Control_L=Escape' # short-pressed Ctrl behaves like Escape
 exec --no-startup-id setbg &
+exec --no-startup-id setxkbmap -layout us &
 # }}}
 # keybindings {{{
 bindsym $mod+Return exec i3-sensible-terminal -e fish
