--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,7 @@ bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
 bind Enter copy-mode # enter copy mode
+set-option -g default-shell /usr/bin/fish
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
