--- a/i3/config
+++ b/i3/config
@@ -55,8 +55,8 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
-bindsym $mod+Period resize grow width 10 px or 10 ppt
-bindsym $mod+Comma resize shrink width 10 px or 10 ppt
+bindsym $mod+comma resize grow width 10 px or 10 ppt
+bindsym $mod+period resize shrink width 10 px or 10 ppt
 # }}}
 # Workspaces {{{
 bindsym $mod+1 workspace 1
