--- a/kanshi/config
+++ b/kanshi/config
@@ -1,7 +1,8 @@
 profile work-triple {
 	output "Samsung Electric Company LF32TU87 HCPRA06041" position 0,0 scale 1
 	output "Dell Inc. DELL P2723DE CS1M5V3" position 3840,0 scale 1
-	output eDP-1 mode 3840x2400 position 320,2160 scale 2
+	output eDP-1 disable
+	#output eDP-1 mode 3840x2400 position 320,2160 scale 2
 }
 profile work-dual-stacked {
 	output "Lenovo Group Limited P27h-20 V90A9YP5" mode 2560x1440 position 0,0 scale 1
