--- a/kanshi/config
+++ b/kanshi/config
@@ -1,8 +1,10 @@
+profile laptop {
+	output eDP-1 mode 3840x2400 position 0,0 scale 2
+}
 profile work-triple {
 	output "Samsung Electric Company LF32TU87 HCPRA06041" position 0,0 scale 1
 	output "Dell Inc. DELL P2723DE CS1M5V3" position 3840,0 scale 1
-	output eDP-1 disable
-	#output eDP-1 mode 3840x2400 position 320,2160 scale 2
+	output eDP-1 mode 3840x2400 position 320,2160 scale 2
 }
 profile work-dual-stacked {
 	output "Lenovo Group Limited P27h-20 V90A9YP5" mode 2560x1440 position 0,0 scale 1
@@ -12,7 +14,8 @@ profile home-dual-stacked {
 	output "Ancor Communications Inc PB328 H3LMQS113349" mode 2560x1440 position 0,0 scale 1
 	output eDP-1 mode 1920x1080 position 320,1440 scale 1
 }
+profile hdmi {
+	output HDMI-A-1 mode 1920x1080 position 0,0 scale 1
+	output eDP-1 mode 1920x1080 position 320,1440 scale 1
 
-profile laptop-only {
-	output eDP-1 mode 3840x2400 position 0,0 scale 2
 }
