disable inlay hints

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "python.jediEnabled": false,
+  "inlayHint.enable": false,
   "pyright.python.linting.ruffEnabled": true,
   "pyright.inlayHints.variableTypes": false,
   "python.autoUpdateLanguageServer": true,
