--- a/aerospace.toml
+++ b/aerospace.toml
@@ -20,23 +20,24 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
     '''
 
     # i3 wraps focus by default
-    alt-j =         'focus --boundaries-action wrap-around-the-workspace left'
-    alt-k =         'focus --boundaries-action wrap-around-the-workspace down'
-    alt-l =         'focus --boundaries-action wrap-around-the-workspace up'
-    alt-semicolon = 'focus --boundaries-action wrap-around-the-workspace right'
+    alt-h =         'focus --boundaries-action wrap-around-the-workspace left'
+    alt-j =         'focus --boundaries-action wrap-around-the-workspace down'
+    alt-k =         'focus --boundaries-action wrap-around-the-workspace up'
+    alt-l =         'focus --boundaries-action wrap-around-the-workspace right'
 
-    alt-shift-j = 'move left'
-    alt-shift-k = 'move down'
-    alt-shift-l = 'move up'
-    alt-shift-semicolon = 'move right'
+    alt-shift-h = 'move left'
+    alt-shift-j = 'move down'
+    alt-shift-k = 'move up'
+    alt-shift-l = 'move right'
+
+    alt-q = 'kill'
+
 
     # Consider using 'join-with' command as a 'split' replacement if you want to enable
     # normalizations
-    alt-h = 'split horizontal'
-    alt-v = 'split vertical'
-
+    # alt-| = 'split horizontal'
+    # alt-v = 'split vertical'
     alt-f = 'fullscreen'
-
     alt-s = 'layout v_accordion' # 'layout stacking' in i3
     alt-w = 'layout h_accordion' # 'layout tabbed' in i3
     alt-e = 'layout tiles horizontal vertical' # 'layout toggle split' in i3
