--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -237,6 +237,7 @@ map yn shell -f echo -n %%f     | xsel -i; xsel -o | xsel -i -b
 # Filesystem Operations
 map =  chmod
 map cw console rename%space
+map r console rename%space
 map aa  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path)
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path, position=7)
