--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,26 @@
 repos:
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: "v4.4.0"
-      hooks:
-          - id: check-yaml
-          - id: end-of-file-fixer
-          - id: trailing-whitespace
-    # - repo: https://github.com/codespell-project/codespell
-    #   rev: v2.2.5
-    #   hooks:
-    #     - id: codespell
-    #       additional_dependencies:
-    #         - tomli
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: "v4.4.0"
+    hooks:
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      # - repo: https://github.com/codespell-project/codespell
+      #   rev: v2.2.5
+      #   hooks:
+      #     - id: codespell
+      #       additional_dependencies:
+      #         - tomli
 
-    - repo: https://github.com/charliermarsh/ruff-pre-commit
-      rev: "v0.0.280"
-      hooks:
-        - id: ruff
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.12.0"
+    hooks:
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix, --config=pyproject.toml]
+      - id: ruff-format
 
-    - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-      rev: v2.10.0
-      hooks:
-        - id: pretty-format-toml
-          args: [--autofix]
+      # - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+      #   rev: v2.10.0
+      #   hooks:
+      #     - id: pretty-format-toml
+      #       args: [--autofix]
