--- a/aerospace.toml
+++ b/aerospace.toml
@@ -57,6 +57,18 @@ alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 alt-shift-space = 'layout floating tiling'  # 'floating toggle' in i3
 alt-w = 'layout h_accordion'  # 'layout tabbed' in i3
+alt-q = 'close'
+
+# Move focus between monitors
+alt-comma = 'focus-monitor left'
+alt-period = 'focus-monitor right'
+
+# Move windows between monitors
+alt-shift-comma = 'move-node-to-monitor left'
+alt-shift-period = 'move-node-to-monitor right'
+
+# Move workspace to different monitor
+alt-shift-m = 'move-workspace-to-monitor --wrap-around next'
 
 [mode.resize.binding]
 enter = 'mode main'
